--- a/APP-UI/src/app/components/user-profile/user-profile.component.html
+++ b/APP-UI/src/app/components/user-profile/user-profile.component.html
@@ -63,7 +63,9 @@
 
 
 <div class="card">
-  <div class="photo"><img src="/assets/image/LOGO.png"/></div>
+  <div class="photo">
+    <img src="/assets/image/user-icon.png" class="profile-image"/>
+  </div>
 
   <div class="profile-card">
     
@@ -113,3 +115,4 @@
 </div>
 
 <!-- </div> -->
+
