--- a/APP-UI/src/app/components/events/events.component.html
+++ b/APP-UI/src/app/components/events/events.component.html
@@ -3,44 +3,43 @@
     <h2 class="card-title">2024 Events & Conference List</h2>
   </div>
   <div class="card-content">
-    <table mat-table [dataSource]="dataSource" matSort class=" table">
-
+    <table mat-table [dataSource]="dataSource" matSort class="table">
+      <!-- Event Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Event </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell"> EVENT </th>
         <td mat-cell *matCellDef="let event"> {{event.name}} </td>
       </ng-container>
 
+      <!-- Date Column -->
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell"> DATE </th>
         <td mat-cell *matCellDef="let event"> {{event.date}} </td>
       </ng-container>
 
-
+      <!-- Location Column -->
       <ng-container matColumnDef="location">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Location</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell"> LOCATION </th>
         <td mat-cell *matCellDef="let event"> {{event.location}} </td>
       </ng-container>
 
-
+      <!-- Organizer Column -->
       <ng-container matColumnDef="organizer">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Organizer</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell"> ORGANIZER </th>
         <td mat-cell *matCellDef="let event"> {{event.organizer}} </td>
       </ng-container>
 
-      
-      
+      <!-- Actions Column -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef class="header-cell"> ACTIONS </th>
         <td mat-cell *matCellDef="let event">
           <a [href]="event.link" target="_blank">
             <mat-icon matTooltip="Go to Link" class="icon">link</mat-icon>
           </a>
-          <mat-icon (click)="signUpforEvent(event)" matTooltip="Create Request" class="icon">assignment</mat-icon> <!-- Static icon, you can replace 'favorite' with your desired icon name -->
+          <mat-icon (click)="signUpforEvent(event)" matTooltip="Create Request" class="icon">assignment</mat-icon>
         </td>
       </ng-container>
-      
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns">Type</tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
