add policy page

--- a/APP-UI/src/app/components/events/event-signup/event-signup.component.html
+++ b/APP-UI/src/app/components/events/event-signup/event-signup.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header">
         <div class="header-container">
-            <h2 class="card-title">Events & Conference Request Form</h2>
+            <h2 class="card-title">Event Request Form</h2>
             <div class="button-group">
                 <button type="button" class="btn">UNDO</button>
                 <button type="submit" class="btn">SUBMIT</button>
