--- a/APP-UI/src/app/components/events/events.component.html
+++ b/APP-UI/src/app/components/events/events.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <h2 class="card-title">2024 Events & Conference List</h2>
+    <h2 class="card-title">2024 Events & Conferences</h2>
   </div>
   <div class="card-content">
     <table mat-table [dataSource]="dataSource" matSort class="table">
