--- a/APP-UI/src/app/components/events/event-signup/event-signup.component.html
+++ b/APP-UI/src/app/components/events/event-signup/event-signup.component.html
@@ -82,6 +82,10 @@
                         </select>
                     </div>
                     <div class="input-field">
+                        <label class="label">Registration Cost:</label>
+                        <input type="number" placeholder="Registration Cost" required>
+                    </div>
+                    <div class="input-field">
                         <label class="label">Travel Cost:</label>
                         <input type="number" placeholder="Travel Cost" required>
                     </div>
@@ -109,7 +113,7 @@
                     <div>
                         <label>
                             <input type="checkbox" required>
-                            I consent that I have viewed the <a href="./policy">Corporate Travel Policy</a>.
+                            I consent that I have viewed the <a href="./policy" target="_blank">Corporate Travel Policy</a>.
                         </label>
                     </div>
 
