--- a/APP-UI/src/app/app.component.css
+++ b/APP-UI/src/app/app.component.css
@@ -4,7 +4,7 @@
     margin-left: 250px; 
     padding: 20px; /* Adds padding inside the container */
     background-color: whitesmoke; /* Sets the background color to white */
-    border: 2px solid #3498db; /* Adds a solid border with a specific color */
+    /* border: 2px solid #3498db; Adds a solid border with a specific color */
     /* border-radius: 8px; Rounds the corners */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow */
     overflow-y: scroll; /* Ensures content stays within the container */
