--- a/APP-UI/src/app/components/expenses/expenses.component.html
+++ b/APP-UI/src/app/components/expenses/expenses.component.html
@@ -1,1 +1,66 @@
-<p>expenses works!</p>
+<div class="card">
+    <div class="card-header">
+        <div class="header-container">
+            <h2 class="card-title">Expense Claims</h2>
+
+        </div>
+    </div>
+    <form>
+        <mat-tab-group>
+            <mat-tab label="Submit A Claim">
+                    <div class="tab-container">
+                        <div class="input-field">
+                            <label class="label">Expense Title:</label>
+                            <input type="text" placeholder="Expense Title" required>
+                        </div>
+                        <div class="input-field">
+                            <label class="label">Assosciated Event:</label>
+                            <select required>
+                                <option *ngFor="let event of events" [value]="event.name">{{ event.name }}</option>
+                            </select>
+                        </div>
+                        <div class="input-field">
+                            <label class="label">Category:</label>
+                            <select required>
+                                <option value="Travel">Travel</option>
+                                <option value="Food">Food</option>
+                                <option value="Accommodation">Accommodation</option>
+                                <option value="Accommodation">Misc.</option>
+                            </select>
+                        </div>
+                        <div class="input-field">
+                            <label class="label">Date:</label>
+                            <input type="date" required>
+                        </div>
+                        <div class="input-field">
+                            <label class="label">Amount:</label>
+                            <input type="number" placeholder="Amount" required>
+                        </div>
+                        <div class="input-field">
+                            <label class="label">Currency:</label>
+                            <select required>
+                                <option value="USD">USD</option>
+                                <option value="CAD">CAD</option>
+                            </select>
+                        </div>
+                        <div class="input-field">
+                            <label class="label">Description:</label>
+                            <input type="text" placeholder="Description" required>
+                        </div>
+                        <div class="input-field">
+                            <label class="label">Attach Receipt:</label>
+                            <input type="file" required>
+                        </div>
+                        <div class="input-field ">
+                            <button type="submit" class="btn">Submit Claim</button>
+                        </div>
+                    </div>
+                </mat-tab>
+                <mat-tab label="View Past Claims">
+
+                </mat-tab>
+        </mat-tab-group>
+
+
+    </form>
+</div>
